@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.93.2.42 2003/03/20 03:05:42 mike Exp $"
+ * "$Id: printers.c,v 1.93.2.43 2003/03/28 17:32:47 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -1519,6 +1519,9 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
 	  LogMessage(L_ERROR, "%s on line %d.", ppdErrorString(pstatus),
 	             pline);
 
+        LogMessage(L_INFO, "Hint: Run \"cupstestppd %s\" and fix any errors.",
+	           filename);
+
 	AddPrinterFilter(p, "application/vnd.cups-postscript 0 -");
       }
       else
@@ -2356,5 +2359,5 @@ write_irix_state(printer_t *p)	/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.93.2.42 2003/03/20 03:05:42 mike Exp $".
+ * End of "$Id: printers.c,v 1.93.2.43 2003/03/28 17:32:47 mike Exp $".
  */
